fix word wrapping in notes field

--- a/app/styles/areas/_details.scss
+++ b/app/styles/areas/_details.scss
@@ -223,7 +223,6 @@
       }
       .details__field--multiline & {
         width: 0;
-        word-break: break-all;
         white-space: pre-wrap;
       }
       .details__field--edit &,
